--- a/config/eyelash_sofle.conf
+++ b/config/eyelash_sofle.conf
@@ -26,3 +26,6 @@ CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
 #macos logo open this config
 #CONFIG_ZMK_DONGLE_DISPLAY_MAC_MODIFIERS=y
+
+# NKRO
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
